style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{margin: 0; padding: 0; font-family: poppins;}

.head-container{
    width: 1160px;
    margin: 0px auto;
}

.container{
    width: 1050px;
    margin: 82px auto;
}

p{
    color: #6C6C6C;
}
/* ==============
   Header start
================= */


#header{
    background-color:  #2D25A0;
    color: white;
}

/*-----------------------
 Navigation bar start
----------------------- */

.navBar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 42px;
    height: 44px;
}

.responsiveNav{
    display: none;
}

.fa-bars{
    font-size: 24px;
}

.menuItem{
    display: flex;
    justify-content: space-between;
    list-style: none;
    width: 587px;
    height: 24px;
}

.button{
    padding: 10px 24px;
    color: white;
    background-color: #E02C6D;
    border: none;
}

.button i{
    margin: 0 8px;
}

/*----------------------
Navigation bar end
--------------------- */

/* --------------
 Head info start
 -------------- */

 .headInfo{
     display: flex;
     justify-content: space-between;
     padding: 60px 0px;
 }

 .title{
     width: 475px;
     height: 230px;
     line-height: 80px;
 }

 .title h1{
     font-size: 64px;
     font-weight: 700;
 }

 .banner{
     width: 456px;
 }

 .banner img{
     width: 100%;
     transition: 2s;
 }

 #header:hover .banner img{
     transform: scale(1.3);
 }


 /* --------------
  Head info end
  -------------- */

  /* ------------
    Header end
--------------- */

/* ----------------
  Player section start
  ----------------- */

  .players{
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      grid-gap: 30px;
      justify-content: center;
  }

.player{
    width: 330px;
    height: 470px;
    box-shadow: 0 0 20px #d6d6d6;
    box-sizing: border-box;
    padding: 15px;
}

.player img{
    width: 100%;
}

.player h3{
    font-size: 28px;
    margin: 12px 0px;
}

/* ----------------
  Player section end
  ----------------- */

  /* -------------------
    Highlights section start
    -------------------- */

.highlightInfo{
    display: flex;
    justify-content: space-between;

}

.highlight{
    width: 469px;
}

.highlightImage{
    width: 50%;
}
.highlight h2{
    font-size: 48px;
    line-height: 60px;
    margin: 50px 0px 8px 0px ;
}

.highlight p{
    margin-bottom: 24px;
    width: 400px;
}

.highlightImage img{
    width: 100%;
}


  /* -------------------
    Highlights section end
    -------------------- */


/* ---------------------
   gallery section start
------------------------ */

.galleryHeading{
    color: rgb(39, 30, 51);
    font-size: 45px;
    text-align: center;
    margin-bottom: 30px;
}

/* .photoGallery{
    background-color: cornflowerblue;
} */
.photos{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
}

.photo{
    border-radius: 10px;
    padding: 10px;
    box-shadow: 0 0 10px rgb(128, 128, 128);
}

.photos img{
    width: 100%;
    height: 200px;

}
/* ---------------------
   gallery section end
------------------------ */

/* ------------------------
 best player section start
 ------------------------ */

 .bPlayers{
     display: flex;
     justify-content: space-between;
 }

 .bPlayers div{
     box-shadow: 0 0 10px rgb(175, 175, 175);
     border-radius: 5px;
     padding: 10px;
 }

 .bPlayers img{
     width: 300px;
     height: 200px;
 }
/* ------------------------
 best player section end
 ------------------------ */

/* ===================
   footer section start
======================= */

.footer{
    width: 484px;
    margin: 0 auto;
}
.footer img{
    width: 100%;
    height: 110px;
}

.icons ul{
    display: flex;
    list-style: none;
    width: 170px;
    justify-content: space-between;
    margin: 20px auto;

}

.icons li{
    width: 30px;
    height: 30px;
    background-color: rgb(228, 228, 228);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    color: gray;
}

.footer span{
    display: block;
    width: 235px;
    margin: 0 auto;
    font-size: 18px;
}

/* ===================
   footer section end
======================= */



/* ====================
    media query start
 ===================== */

@media only screen and (max-width: 576px) {

    *{
        margin-right: 0px;
    }

    .head-container{
        width: 330px;
        margin: 0px auto;
    }
    
    .container{
        width: 330px;
        margin: 82px auto;
    }

    .banner img{
        margin-top: 40px;
    }

    .responsive, .responsive div, .responsive h1, .responsive h2, .responsive h3{
        display: flex;
        flex-direction: column;
        width: 100%;
        /* text-align: center; */
    }

    .rButton{
        padding: 7px 18px;
        display: block;
    }

    .navBar{
        display: none;
    }
    .responsiveNav{
        display: flex;
        justify-content: space-between;
        padding-top: 33px;
    }
    .button{
        margin-bottom: 30px;
    }
    .title{
        margin-bottom: 150px;
    }

    .bPlayers div{
        margin-bottom: 20px;
    }

    .footer{
        width: 100%;

    }
    .footer img, div, span{
        width: 100%;
        height: auto;
        text-align: center;
    }

    
}


/* ====================
    media query end
 ===================== */

